Chapter 2 with Denis's comments v1, Chapter 3 without review and begining of Chapter 4

--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -406,5 +406,313 @@ url="https://doi.org/10.1140/epjc/s10052-016-4274-7"
       SLACcitation   = "%%CITATION = ARXIV:1206.4071;%%",
 }
 
+@article{20121,
+title = "Observation of a new particle in the search for the Standard Model Higgs boson with the ATLAS detector at the LHC",
+journal = "Physics Letters B",
+volume = "716",
+number = "1",
+pages = "1 - 29",
+year = "2012",
+note = "",
+issn = "0370-2693",
+doi = "http://dx.doi.org/10.1016/j.physletb.2012.08.020",
+url = "http://www.sciencedirect.com/science/article/pii/S037026931200857X",
+author = "G. Aad and others",
+}
+
+@article{201230,
+title = "Observation of a new boson at a mass of 125 GeV with the CMS experiment at the LHC",
+journal = "Physics Letters B",
+volume = "716",
+number = "1",
+pages = "30 - 61",
+year = "2012",
+note = "",
+issn = "0370-2693",
+doi = "http://dx.doi.org/10.1016/j.physletb.2012.08.021",
+url = "http://www.sciencedirect.com/science/article/pii/S0370269312008581",
+author = "S. Chatrchyan and others",
+keywords = "CMS",
+keywords = "Physics",
+keywords = "Higgs"
+}
+
+@MISC{StandardModelDiagram,
+    author = {Daniel Dominguez},
+    title = {Particles of the Standard Model of particle physics},
+    year = {2016},
+    note = {[Online; accessed June 7, 2019},
+    howpublished = "\url{https://home.cern/science/physics/standard-model}"
+} 
+@misc{ wiki:charge,
+    author = "{Wikipedia contributors}",
+    title = "Charge (physics) --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2019",
+    url = "https://en.wikipedia.org/w/index.php?title=Charge_(physics)&oldid=898755048",
+    note = "[Online; accessed 7-June-2019]"
+  }
+
+  @article{Noether1918,
+author = {Noether, E.},
+journal = {Nachrichten von der Gesellschaft der Wissenschaften zu Göttingen, Mathematisch-Physikalische Klasse},
+language = {ger},
+pages = {235-257},
+title = {Invariante Variationsprobleme},
+url = {http://eudml.org/doc/59024},
+volume = {1918},
+year = {1918},
+}
+
+@book{Peskin:1995ev,
+      author         = "Peskin, Michael E. and Schroeder, Daniel V.",
+      title          = "{An Introduction to quantum field theory}",
+      publisher      = "Addison-Wesley",
+      address        = "Reading, USA",
+      year           = "1995",
+      url            = "http://www.slac.stanford.edu/~mpeskin/QFT.html",
+      ISBN           = "9780201503975, 0201503972",
+      SLACcitation   = "%%CITATION = INSPIRE-407703;%%"
+}
+@misc{ wiki:diracfield,
+    author = "{Wikipedia contributors}",
+    title = "Fermionic field --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2018",
+    url = "https://en.wikipedia.org/w/index.php?title=Fermionic_field&oldid=873802891",
+    note = "[Online; accessed 7-June-2019]"
+  }
+
+  @misc{ wiki:gammam,
+    author = "{Wikipedia contributors}",
+    title = "Gamma matrices --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2019",
+    url = "https://en.wikipedia.org/w/index.php?title=Gamma_matrices&oldid=887401456",
+    note = "[Online; accessed 7-June-2019]"
+  }
+
+  @article{Rajasekaran:2014vza,
+      author         = "Rajasekaran, G.",
+      title          = "{Fermi and the Theory of Weak Interactions}",
+      journal        = "Resonance J. Sci. Educ.",
+      volume         = "19",
+      year           = "2014",
+      number         = "1",
+      pages          = "18-44",
+      doi            = "10.1007/s12045-014-0005-2",
+      eprint         = "1403.3309",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.hist-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1403.3309;%%"
+}
+@article{PhysRev.82.914,
+  title = {The Theory of Quantized Fields. I},
+  author = {Schwinger, Julian},
+  journal = {Phys. Rev.},
+  volume = {82},
+  issue = {6},
+  pages = {914--927},
+  numpages = {0},
+  year = {1951},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.82.914},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.82.914}
+}
+@book{Cheng:1985bj,
+      author         = "Cheng, T. P. and Li, L. F.",
+      title          = "{GAUGE THEORY OF ELEMENTARY PARTICLE PHYSICS}",
+      journal        = "Oxford, Uk: Clarendon ( 1984) 536 P. ( Oxford Science
+                        Publications)",
+      year           = "1984",
+      ISBN           = "9780198519614",
+      SLACcitation   = "%%CITATION = INSPIRE-221340;%%"
+}
+
+@article{Patrignani:2016xqp,
+      author         = "Patrignani, C. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin. Phys.",
+      volume         = "C40",
+      year           = "2016",
+      number         = "10",
+      pages          = "100001",
+      doi            = "10.1088/1674-1137/40/10/100001",
+      SLACcitation   = "%%CITATION = CHPHD,C40,100001;%%"
+}
+@article{Aaij:2019wad,
+      author         = "Aaij, Roel and others",
+      title          = "{Search for lepton-universality violation in $B^+\to
+                        K^+\ell^+\ell^-$ decays}",
+      collaboration  = "LHCb",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "122",
+      year           = "2019",
+      number         = "19",
+      pages          = "191801",
+      doi            = "10.1103/PhysRevLett.122.191801",
+      eprint         = "1903.09252",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "LHCb-PAPER-2019-009, CERN-EP-2019-043,
+                        LHCb-PAPER-2019-009 CERN-EP-2019-043",
+      SLACcitation   = "%%CITATION = ARXIV:1903.09252;%%"
+}
+@article{Ball:2014uwa,
+      author         = "Ball, Richard D. and others",
+      title          = "{Parton distributions for the LHC Run II}",
+      collaboration  = "NNPDF",
+      journal        = "JHEP",
+      volume         = "04",
+      year           = "2015",
+      pages          = "040",
+      doi            = "10.1007/JHEP04(2015)040",
+      eprint         = "1410.8849",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "EDINBURGH-2014-15, IFUM-1034-FT, CERN-PH-TH-2013-253,
+                        OUTP-14-11P, CAVENDISH-HEP-14-11",
+      SLACcitation   = "%%CITATION = ARXIV:1410.8849;%%"
+}
+
+@article{Billoir:1989mh,
+      author         = "Billoir, Pierre",
+      title          = "{Progressive track recognition with a Kalman like fitting
+                        procedure}",
+      booktitle      = "{\#DONE: Comput. Phys. Commun. 57 (1989) 390-394.}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "57",
+      year           = "1989",
+      pages          = "390-394",
+      doi            = "10.1016/0010-4655(89)90249-X",
+      SLACcitation   = "%%CITATION = CPHCB,57,390;%%"
+}
+
+@article{BILLOIR1990219,
+title = "Simultaneous pattern recognition and track fitting by the Kalman filtering method",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+volume = "294",
+number = "1",
+pages = "219 - 228",
+year = "1990",
+issn = "0168-9002",
+doi = "https://doi.org/10.1016/0168-9002(90)91835-Y",
+url = "http://www.sciencedirect.com/science/article/pii/016890029091835Y",
+author = "P. Billoir and S. Qian"
+}
+
+@article{Mankel:1997dy,
+      author         = "Mankel, R.",
+      title          = "{A Concurrent track evolution algorithm for pattern
+                        recognition in the HERA-B main tracking system}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A395",
+      year           = "1997",
+      pages          = "169-184",
+      doi            = "10.1016/S0168-9002(97)00705-5",
+      reportNumber   = "DESY-97-054",
+      SLACcitation   = "%%CITATION = NUIMA,A395,169;%%"
+}
+
+@article{Fruhwirth:1987fm,
+      author         = "Fruhwirth, R.",
+      title          = "{Application of Kalman filtering to track and vertex
+                        fitting}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A262",
+      year           = "1987",
+      pages          = "444-450",
+      doi            = "10.1016/0168-9002(87)90887-4",
+      reportNumber   = "HEPHY-PUB-87-503",
+      SLACcitation   = "%%CITATION = NUIMA,A262,444;%%"
+}
+@article{TRK-11-001,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Description and performance of track and
+                        primary-vertex reconstruction with the CMS
+                        tracker}",
+      collaboration  = "CMS",
+      journal           = "JINST",
+      volume          = "9",
+      pages           = "P10009",
+      doi            = "10.1088/1748-0221/9/10/P10009",
+      year           = "2014",
+      eprint         = "1405.6569",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "CMS-TRK-11-001, CERN-PH-EP-2014-070",
+      SLACcitation   = "%%CITATION = ARXIV:1405.6569;%%",
+      url            = {http://stacks.iop.org/1748-0221/9/i=10/a=P10009}
+}
+
+@techreport{Fruhwirth:1027031,
+      author        = "Frühwirth, R and Waltenberger, Wolfgang and Vanlaer,
+                       Pascal",
+      title         = "{Adaptive Vertex Fitting}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-NOTE-2007-008",
+      month         = "Mar",
+      year          = "2007",
+      reportNumber  = "CMS-NOTE-2007-008",
+      url           = "https://cds.cern.ch/record/1027031",
+}
+
+@ARTICLE{726788, 
+author={K. {Rose}}, 
+journal={Proceedings of the IEEE}, 
+title={Deterministic annealing for clustering, compression, classification, regression, and related optimization problems}, 
+year={1998}, 
+volume={86}, 
+number={11}, 
+pages={2210-2239}, 
+doi={10.1109/5.726788}, 
+ISSN={0018-9219}, 
+month={Nov},}
+
+@techreport{Speer:927395,
+      author        = "Speer, Thomas and Prokofiev, Kirill and Frühwirth, R and
+                       Waltenberger, Wolfgang and Vanlaer, Pascal",
+      title         = "{Vertex Fitting in the CMS Tracker}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-NOTE-2006-032",
+      month         = "Feb",
+      year          = "2006",
+      reportNumber  = "CMS-NOTE-2006-032",
+      url           = "https://cds.cern.ch/record/927395",
+}
+
+@misc{CMSSlice,
+      collaboration = "CMS",
+      title         = "{The CMS Detector and the Token Bit Manager}",
+      month         = "Jan",
+      year          = "2017",
+      howpublished  = "\url{https://www.phys.ksu.edu/reu2014/wabehn/}",
+}
+@article{BUSKULIC1995481,
+title = "Performance of the ALEPH detector at LEP",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+volume = "360",
+number = "3",
+pages = "481 - 506",
+year = "1995",
+issn = "0168-9002",
+doi = "https://doi.org/10.1016/0168-9002(95)00138-7",
+url = "http://www.sciencedirect.com/science/article/pii/0168900295001387",
+author = "The ALEP Collaboration"
+}
+
+@techreport{CMS-PAS-PFT-09-001,
+      title         = "{Particle-Flow Event Reconstruction in CMS and Performance
+                       for Jets, Taus, and MET}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-PFT-09-001",
+      month         = "Apr",
+      year          = "2009",
+      reportNumber  = "CMS-PAS-PFT-09-001",
+      url           = "http://cds.cern.ch/record/1194487",
+}
 
 
