--- a/data/nomenclature.tex
+++ b/data/nomenclature.tex
@@ -27,9 +27,24 @@
 \begin{spacing}{1.0}
 	\begin{longtable}[htbp]{@{}p{0.35\textwidth} p{0.62\textwidth}@{}}
 	   % \begin{tabular}{@{}p{0.33\textwidth} p{0.62\textwidth}@{}}
+		ATLAS	&	A Toroidal LHC ApparatuS\\	[2ex]
+		BEH	&	Brout-Englert-Higgs\\	[2ex]
 		BFF	&	Bottom Fermion Fusion\\	[2ex]
+		CERN & European Center for Nuclear Research\\ [2ex]
+		CMS	&	Compact Muon Solenoid\\	[2ex]		
+		EMCAL & Electromagnetic Calorimeter\\ [2ex]
 		EW	&	Electroweak\\	[2ex]
+		EWSB	&	Electroweak Symmetry Breaking\\	[2ex]	
+		FCNC &  Flavor-Changing Neutral-Current\\  [2ex]
+		GR &  General Relativity\\  [2ex]		
+		HCAL & Hadron Calorimeter\\ [2ex]
+		HLT  & High Level Trigger\\ [2ex]	
+		LHC  & Large Hadron Collider\\ [2ex]
+		$\eta$ & Pseudorapidity\\ [2ex]
+		PF   & Particle Flow\\ [2ex]
+		$p_{T}$ & Transverse Momentum\\ [2ex]		
 		QCD	&	Quantum Chromodynamics\\	[2ex]
+		QED	&	Quantum Electrodynamics\\	[2ex]		
 		QFT	&	Quantum Field Theory\\	[2ex]
 		SM	&	Standard Model of particle physics\\	[2ex]
 		VBF	&	Vector Boson Fusion\\	[2ex]
