--- a/data/section3.tex
+++ b/data/section3.tex
@@ -15,7 +15,7 @@
 \chapter{The LHC and CMS Detector}
 \section{The Large Hadron Collider}
 
-The Large Hadron Collider (LHC) \cite{Breskin:1244506} experiment at the European ORganization for Nuclear Research (CERN) is the world's largest and most powerful particle accelerator in operation today. Located at the border between Switzerland and France, it consists of a 27-km circumference ring of superconducting magnets and accelerating structures.
+The Large Hadron Collider (LHC) \cite{Breskin:1244506} experiment at the European Organization for Nuclear Research (CERN) is the world's largest and most powerful particle accelerator in operation today. Located at the border between Switzerland and France, it consists of a 27-km circumference ring of superconducting magnets and accelerating structures.
 
 Within the ring, protons are accelerated to a speed close to that of light and made to collide at 4 points:
 
@@ -26,7 +26,7 @@ Within the ring, protons are accelerated to a speed close to that of light and m
 \item and LHCb (Large Hadron Collider beauty) \cite{Alves:2008zz}.
 \end{itemize}
 
-ATLAS and CMS are the two general-purpose particle detectors located at opposite sides on the LHC ring. These are "onion-type" detectors in the sense that their general layout surrounds the interaction point with sub-detector systems aimed to measure a specific property of the particle to be detected.
+ATLAS and CMS are two general-purpose particle detectors located at opposite sides on the LHC ring. These are "onion-type" detectors in the sense that their general layout surrounds the interaction point with sub-detector systems aimed to measure a specific property of the particle to be detected.
 
 The other two detectors, ALICE and LHCb are designed for specific purposes, like studying heavy-ion collisions and performing precision measurements of CP-violation and the physics of B-mesons, respectively. For this study we are going use data collected by the CMS experiment.
 
@@ -38,27 +38,19 @@ The other two detectors, ALICE and LHCb are designed for specific purposes, like
  	\label{fig:lhcdia}
  \end{figure}
 
- According to Einstein's famous equation $E=mc^{2}$, energy and mass are interchangeable. Therefore in order to produce heavy particles, a large amount of energy is required. The LHC was designed to produced highly energetic proton-proton, lead-proton or lead-lead beam collisions in which a variety of elementary particles can be produced.
+ According to Einstein's famous equation $E=mc^{2}$, energy and mass are interchangeable. Therefore in order to produce heavy particles, a large amount of energy is required. The LHC was designed to produce highly energetic proton-proton, lead-proton or lead-lead beam collisions in which a variety of elementary particles can be produced.
 
- Therefore, the two most important features of a particle accelerator are its center of mass energy and its instantaneous luminosity ($\mathcal{L}$). The latter provides a measurement of the number of collisions that can be produced in the accelerator per squared centimeter and per second.
+ The beams circulating the LHC ring are not continuous streams of particles, but rather trains of regularly spaced proton bunches. The experiment was designed to operate with 2,808 bunches of protons per beam, containing about $1.5\times10^{11}$ protons per bunch separated by 25 ns, corresponding to a collision frequency of 40 MHz. 
 
-For a given process, the number of interactions (N) is the product of $\mathcal{L}$ integrated over the data taking time period and the cross section for the process in question ($\sigma_{ref}$):
-
-\begin{equation}
-N = \sigma_{ref}\int\mathcal{L}(t)dt
-\end{equation} 
-
-Now, the beams circulating the LHC ring are not continuous streams of particles, but rather trains of regularly spaced proton bunches. The experiment was designed to operate with 2,808 bunches of protons per beam, containing about $1.5\times10^{11}$ protons per bunch separated by 25 ns, corresponding to a collision frequency of 40 MHz. 
-
-The LHC was planned to start in September 2008, but due to an incident damaging the machine, this was not the case. The startup was delayed until Nivember 23, 2009. Through its 2010-2011 run, the LHC operated at a center-of-mass energy of 7 TeV. Then in 2012, the energy was increased to 8 TeV, and again to 13 TeV in 2015, after a shutdown in 2013 that lasted two years.
+The LHC was planned to start in September 2008, but due to an incident damaging the machine, this was not the case. The startup was delayed until November 23, 2009. Through its 2010-2011 run, the LHC operated at a center-of-mass energy of 7 TeV. Then in 2012, the energy was increased to 8 TeV, and again to 13 TeV in 2015, after a shutdown in 2013 that lasted two years.
 
 
 \section{The CMS Detector}
 
-The central feature of the CMS apparatus is a superconducting solenoid of 6m internal diameter, providing a magnetic field of 3.8 T. The solenoidal volume contains a silicon pixel and strip tracker, a lead tungstate crystal EM calorimeter. Each layer of the detector exploits a property of the particle to be detected to measure its energy or its momentum. 
-An unusual feature of the CMS detector is that instead of being built on site like other giant detectors of the LHC experiment, it was constructed in 15 sections at ground level before being lowered into an underground cavern near Cessy in France and reassembled. The complete detector is 21 meters long, 12 meters wide and 15 meters high.
+The central feature of the CMS apparatus is a superconducting solenoid of 6 m internal diameter, providing a magnetic field of 3.8 T. The solenoidal volume contains a silicon pixel and strip tracker, a lead tungstate crystal electromagnetic calorimeter (EMCAL) and a brass and scintillator hadron calorimeter (HCAL). Each layer of the detector exploits a property of the particle to be detected to measure its energy or its momentum. 
+The CMS detector was not built on site like other giant detectors of the LHC experiment, but it was constructed in 15 sections at ground level before being lowered into an underground cavern near Cessy in France and then reassembled. The complete detector is 21 m long, 12 m wide and 15 m high.
 
-The goals of the physics program range from studying the SM (including the Higgs boson) to searching for extra dimensions and particles that could make up dark matter. It even has a very successful heavy ion program.
+The goals of the CMS physics program range from studying the SM (including the Higgs boson) to searching for extra dimensions and dark matter. It even has a very successful heavy ion program.
 
 The layout of the detector can be seen in Figure \ref{fig:cmsdia}. The following sections will describe each of the sub-detectors and its properties.
 
@@ -72,20 +64,20 @@ The layout of the detector can be seen in Figure \ref{fig:cmsdia}. The following
 
  \subsection{Coordinate System}
 
- The CMS experiment uses a right-handed coordinate system, with the origin at the nominal collision point, the $x-axis$ pointing to the center of the LHC ring, the $y-axis$ pointing up (perpendicular to the LHC plane), and the $z-axis$ along the anticlockwise beam direction. The polar angle($\theta$) is measured from the positive $z-axis$ and the azimuthal angle($\phi$) is measured from the positive $x-axis$ in the $x-y$ plane. The radius($r$) denotes the distance from the $z-axis$ and the pseudorapidity$(\eta)$ is defined as $\eta=-log[tan(\theta \ 2)]$. $\eta$ is preferently used by particle physicists to measure forward-ness of particles in the detector since any differences in this coordinate are invariant under boosts in the $z-$direction and particle production is roughly uniform in $\eta$. See Figure \ref{fig:cmscor} for reference.
+ The CMS experiment uses a right-handed coordinate system, with the origin at the nominal collision point, the $x$-axis pointing to the center of the LHC ring, the $y$-axis pointing up (perpendicular to the LHC plane), and the $z$-axis along the anticlockwise beam direction. The polar angle $\theta$ is measured from the positive $z-axis$ and the azimuthal angle $\phi$ is measured from the positive $x$-axis in the $x-y$ plane. The radius $r$ denotes the distance from the $z$-axis and the pseudorapidity $\eta$ is defined as $\eta=-log[tan(\theta \ 2)]$. $\eta$ is preferently used by particle physicists to measure forward-ness of particles in the detector since any differences in this coordinate are invariant under boosts in the $z-$direction and particle production is roughly uniform in $\eta$. See Figure \ref{fig:cmscor} for reference.
 
   \begin{figure}[H]
  	\centering
- 	\includegraphics[width=0.5\textwidth]{figures/corsym.png}
+ 	\includegraphics[width=0.5\textwidth]{figures/corsyslhc.png}
  	\singlespace
  	\caption{Diagram for the CMS detector coordinate system.}
  	\label{fig:cmscor}
  \end{figure}
 
  \subsection{Tracker and Pixel Detector}
- Momentum analysis in CMS makes use of the magnetic field provided by its super-conducting solenoid around which the entire experiment is built. The tracker sub-detector is not only able to measure the momentum of charged particles but also determines their direction at their production vertex.
+ Momentum analysis in CMS makes use of the magnetic field provided by its super-conducting solenoid. The tracker sub-detector is not only able to measure the momentum of charged particles but also determines their direction at their production vertex.
 
- The Tracker is the inner most layer of the detector and receives the highest volume of particles and therefore the construction materials were carefully chosen to resist radiation. It consists of a subsystem made entirely of silicon: the pixels, at the very core of the detector and dealing with the highest intensity of particles, and the silicon micro-strip detectors that surround it. In total, the sub-detector is 5.8 long and 2.5 m in diameter with an ability to measure the momentum of charged particles in the region $|\eta|<$ 2.5. Figure \ref{fig:cmstracker} shows the layout of the tracker and its subsystems.
+ The Tracker is the inner most layer of the detector and therefore receives the highest volume of particles. It consists of a subsystem made entirely of silicon, the pixels, at the very core of the detector; and the silicon micro-strip detectors that surround it. In total, the sub-detector is 5.8 m long and 2.5 m in diameter with an ability to measure the momentum of charged particles in the region $|\eta|<$ 2.5. Figure \ref{fig:cmstracker} shows the layout of the tracker and its subsystems.
 
    \begin{figure}[H]
  	\centering
@@ -95,13 +87,13 @@ The layout of the detector can be seen in Figure \ref{fig:cmsdia}. The following
  	\label{fig:cmstracker}
  \end{figure}
 
-The pixel detector is made up of three barrel layers, called BPIX, and two endcap layers called the FPIX. The BPIX contains 48 million pixels and the FPIX contains another 18 million pixels. In totral it consists of 1440 hybrid silicon detector modules, each with a dimension of $100 \times 150 \mu m^{2}$. The small pixel size enables track resolutions of 10$\mu m$ in the transverse plane and 20$\mu m$ in the $z$-direction. The pixel detector is what gives CMS its exccellent secondary vertex tagging ability in addition to producing seed tracks for the strip tracker and the high level trigger.
+The pixel detector is made up of three barrel layers, called BPIX, and two endcap layers called the FPIX. The BPIX contains 48 million pixels and the FPIX contains another 18 million pixels. In totral it consists of 1440 hybrid silicon detector modules, each with a dimension of $100 \times 150 \mu m^{2}$. The small pixel size enables track resolutions of 10$\mu m$ in the transverse plane and 20$\mu m$ in the $z$-direction. The pixel detector is what gives CMS its excellent secondary vertex tagging ability in addition to producing seed tracks for the strip tracker and the high level trigger (HLT).
 
-Likewise, the silicon strip detector is made up of four subsystems. The Tracker Inner Barrel (TIB) has four layers of 320 $\mu m$ strips. At each end of the TIB is a three-layer Tracker Inner Disks (TID), which contains strips of the same thickness. The Tracker Outer Barrel (TOB) is the six layer system which surrounds the TIB/TID. The first four layers of the TOB use 500$\mu m$ thick strips, and the last two layers use 122 $\mu m$ thick strips. The Tracker EndCaps (TEC) are on either side of the previous setup and contain nine disks with up to seven layers of strips. These estrips are 320 $\mu m$ thick in the inner four rings and 500 $\mu m$ in the outer three rings. In total, the strip detector contains 9.3 million silicon strips.
+Likewise, the silicon strip detector is made up of four subsystems. The Tracker Inner Barrel (TIB) has four layers of 320 $\mu m$ strips. At each end of the TIB is a three-layer Tracker Inner Disks (TID), which contains strips of the same thickness. The Tracker Outer Barrel (TOB) is the six layer system which surrounds the TIB/TID. The first four layers of the TOB use 500$\mu m$ thick strips, and the last two layers use 122 $\mu m$ thick strips. The Tracker EndCaps (TEC) are on either side of the previous setup and contain nine disks with up to seven layers of strips. These strips are 320 $\mu m$ thick in the inner four rings and 500 $\mu m$ in the outer three rings. In total, the strip detector contains 9.3 million silicon strips.
 
  \subsection{Electromagnetic Calorimeter}
 
- The electromagnetic calorimeter (ECAL) is a homogeneous calorimeter made out of lead tungstate ($PbWO_{4}$) crystals totaling 75,848 units. The detector is divided up into two sections which provide a coverage of $|\eta| < 1.479$ in the barrel region (EB) and $1.479 < |\theta| < 3.0$ in two endcap regions (EE). There are also preshower detectors (PS) in each of the endcaps, in fornt of the EE, which cover a pseudorapidity range of $1.653 < |\eta| < 2.6$. Figure \ref{fig:cmsecal} shows the structure of the ECAL.
+ The ECAL is a homogeneous calorimeter made out of lead tungstate ($PbWO_{4}$) crystals totaling 75,848 units. The detector is divided up into two sections which provide a coverage of $|\eta| < 1.479$ in the barrel region (EB) and $1.479 < |\theta| < 3.0$ in two endcap regions (EE). There are also preshower detectors (PS) in each of the endcaps, in fornt of the EE, which cover a pseudorapidity range of $1.653 < |\eta| < 2.6$. Figure \ref{fig:cmsecal} shows the structure of the ECAL.
 
     \begin{figure}[H]
  	\centering
@@ -124,13 +116,11 @@ where $N$ is a term representing a contribution due to electronic and pileup noi
 
  \subsection{Hadron Calorimeter}
 
- The CMS hadron calorimeter (HCAL) is a sampling calorimeter, meaning it finds a particle's position, energy and arrival time using alternating layers of "absorber" and fluorescent "scintillator" materials that produce a rapid light pulse when the particle passes through. Special optic fibers collect up this light and feed it into readout boxes where photodetectors amplify the signal. Then the amount of light in a given region is summed up over many layers of tiles in depth, called a "tower", this total amount of light is a measure of a particle's energy. The HCAL is organized into barrel (HB and HO), endcap (HE), and forward (HF). There are 36 barrel "wedges", each weighting 26 tonnes. These form the last layer of detector inside the magnetic coil whilst a few additional layers, the outer barrel (HO), sit outside the coil, ensuring no energy leaks ouut the back of the HB undetected. Similarly, 36 endcap wedges measure particle enrgies as they emerge through the ends of the solenoid magnet.
+ The CMS HCAL is a sampling calorimeter, meaning it finds a particle's position, energy and arrival time using alternating layers of "absorber" and fluorescent scintillator or "active" materials that produce a rapid light pulse when the particle passes through. The produced light is then collected by optic fibers that feed it into readout boxes where photodetectors amplify the signal. The amount of light in a given region is summed up over many layers of tiles in depth, called a "tower". The HCAL is organized into barrel (HB and HO), endcap (HE), and forward (HF). There are 36 barrel "wedges", each weighting 26 tonnes. These form the last layer of detector inside the magnetic coil. A few additional layers, the outer barrel (HO), sit outside the coil, ensuring no energy leaks out the back of the HB undetected. Similarly, 36 endcap wedges measure particle energies as they emerge through the ends of the solenoid magnet.
 
- Lastly, the two hadronic forward calorimeters (HF) are positioned at either end of CMS, to pick up the myriad particles coming out of the collision region at shallow angles relative to the beam line. These receive the bulk of the particle energy contained in the collision so must be very radiation resistant and use different materials than the other parts of the HCAL.
+ Lastly, the two hadronic forward calorimeters (HF) are positioned at either end of CMS, to detect particles coming out of the collision region at shallow angles relative to the beam line. These receive the bulk of the particle energy contained in the collision so must be very radiation resistant. Figure \ref{fig:cmshcal} shows the structure and position of the HCAL subsystems. 
 
- Figure \ref{fig:cmshcal} shows the structure and position of the HCAL subsystems. 
-
-     \begin{figure}[H]
+     \begin{figure}[h]
  	\centering
  	\includegraphics[width=0.9\textwidth]{figures/HCAL_subdet.pdf}
  	\singlespace
@@ -142,15 +132,15 @@ Combined, the ECAL and HCAL can measure the energy deposited by a charged pion w
 
  \subsection{Solenoid}
 
- The CMS magnet is the central device around which the experiment is built, with a 4T tesla magnetic field, which is 100,000 times stronger than that of Earth.
+ The CMS magnet is the central device around which the experiment is built. It provides a 4T magnetic field, which is 100,000 times stronger than that of Earth.
 
- Its job is to bend the paths of charged particles emerging from high-energy collisions in the LHC. The higher momentum particles get their path curve less than the lighter ones, and as a result, curvature is an important tool for momentum measurements. 
+ Its job is to bend the paths of charged particles emerging from high-energy collisions in the LHC. The higher momentum particles get their path curved less than the lighter ones, and as a result, curvature is an important tool for momentum measurements. 
 
- CMS strong magnetic field, combined with the high-precision position measurements in the tracker and muon detectors, allows for accurate measurement of the momentum of high-energy particles.
+ The strong magnetic field, combined with the high-precision position measurements in the tracker and muon detectors, allows for accurate measurement of the momentum of high-energy particles.
 
  The CMS solenoid magnet is made of coils of wire that produce a uniform magnetic field when electricity flows through them. Also, it is superconducting, the largest ever built, with a weight of 12,000 tonnes. In order for it to be superconducting, it needs to be colled down to -268.5 C, which is a degree warmer than outer space.
 
- The tracker and calorimeter detectors fit inside the magnet whilst the muon detectors are interleaved with a 12-sided iron structure that surrounds the magnet coils and contains and guides the field. Made up of three layers, this "return yoke" reaches out 14 metres in diameter and also acts as a filter, allowing through only muons and weakly interacting particles such as neutrinos. The enormous magnet also provides most of the experiment's structural support, and must be very strong itself to withstand the forces of its own magnetic field.
+ The tracker and calorimeter detectors fit inside the magnet while the muon detectors are interleaved with a 12-sided iron structure that surrounds the magnet coils and contains and guides the field. Made up of three layers, this "return yoke" reaches out 14 meters in diameter and also acts as a filter, allowing through only muons and weakly interacting particles such as neutrinos. The enormous magnet also provides most of the experiment's structural support, and must be very strong itself to withstand the forces of its own magnetic field.
 
 
  \subsection{Muon System}
@@ -160,7 +150,7 @@ Combined, the ECAL and HCAL can measure the energy deposited by a charged pion w
 
  The barrel region of the detector contains DT's and RPCs, while the endcap region contains CSCs and RPCs. The layout of the muon system can be seen in Figure \ref{fig:cmsmuonsys}. 
 
-    \begin{figure}[H]
+    \begin{figure}[h]
  	\centering
  	\includegraphics[width=0.9\textwidth]{figures/CMS_muon_system.pdf}
  	\singlespace
@@ -171,9 +161,9 @@ Combined, the ECAL and HCAL can measure the energy deposited by a charged pion w
 The four muon DT stations sitting outside the magnet coil are interleaved with the
 iron "return yoke" (shown in red in Figure \ref{fig:cmsmuchambers}, for the barrel region), which not only returns the flux from the solenoid, but also shields the muon chambers from hadrons. 
 
-    \begin{figure}[H]
+    \begin{figure}[h]
  	\centering
- 	\includegraphics[width=0.9\textwidth]{figures/MuStations.pdf}
+ 	\includegraphics[width=0.5\textwidth]{figures/MuStations.png}
  	\singlespace
  	\caption{A muon, in the plane perpendicular to the LHC beams, leaves a curved trajectory in four layers of muon detectors or stations.}
  	\label{fig:cmsmuchambers}
@@ -187,11 +177,20 @@ The muon system on its own has a resolution of 15-40$\%$ depending on $\eta$. Ma
  \subsection{Trigger}
  When CMS is performing at its peak, about one billion proton-proton interactions will take place every second inside the detector. In order to record only those events generated from energetic, head-on collisions, a "trigger" system was implemented.
 
-Level 1 of the trigger is an extremely fast, hardware based process that looks for simple signs of interesting physics, e.g. particles with a large amount of energy or in unusual combinations. The L1 trigger selects events at a rate of around 100 kHz within a time interval of 4$\mu$s. The next step is the High Level Trigger (HLT), which combines the information from different parts of the detector to recreate the entire event and send it to a farm of more than 1000 computers to filter even more events, reducing the event rate to less than 1 kHz before recording them on tape.
+Level 1 of the trigger is an extremely fast, hardware based process that looks for simple signs of interesting physics, e.g. particles with a large amount of energy or in unusual combinations. The L1 trigger selects events at a rate of around 100 kHz within a time interval of 4$\mu$s. The next step is the HLT, which combines the information from different parts of the detector to recreate the entire event and send it to a farm of more than 1000 computers to filter even more events, reducing the event rate to less than 1 kHz before recording them on tape.
 
 \subsection{Luminosity Measurement}
 
-Bsides measuring the kinematics of each of the particles traversing the detector, CMS must also measure the instantaneous luminosity delivered by the LHC. Both the pixel detector, and the HF are able to measure the luminosity to varying degrees of accuracy.
+The two most important features of a particle accelerator are its center of mass energy and its instantaneous luminosity ($\mathcal{L}$). The latter provides a measurement of the number of collisions that can be produced in the accelerator per squared centimeter and per second.
+
+Besides measuring the kinematics of each of the particles traversing the detector, CMS must also measure the instantaneous luminosity delivered by the LHC. Both the pixel detector, and the HF are able to measure the luminosity to varying degrees of accuracy.
+
+For a given process, the number of interactions (N) is the product of $\mathcal{L}$ integrated over the data taking time period and the cross section for the process in question ($\sigma_{ref}$):
+
+\begin{equation}
+N = \sigma_{ref}\int\mathcal{L}(t)dt
+\end{equation} 
+
 
 The Van der Meer (VdM) scan method measures the size and shape of the interaction region of the colliding beams. This is achieved by displacing the beams in the x and y- (transverse) planes and measuring the relative interaction rates as a function of the transverse beam separation. For Gaussian beams, the luminosity as a function of the transverse displacement ($\delta u$) can then be expressed as:  
 
@@ -207,7 +206,7 @@ where
 
 and $\sigma_{u} = \sqrt{\sigma_{1u}^{2}+\sigma_{2x}^{2}}$ with $u=x,y$ for each separation plane, $N_{b}$ the number of colliding bunches and $f$ the revolution frequency.
 
-A fit of the measured interaction rates as a ufnction of the reparation will allow to determine the effective beam size as well as the maximum achievable collision rate ($\dot{N}$)
+A fit of the measured interaction rates as a function of the reparation will allow to determine the effective beam size as well as the maximum achievable collision rate ($\dot{N}$)
 
 \begin{equation}
 \dot{N} = \mathcal{L}\sigma
